test/programs/invalid_programs/variables/constant_var_mutation.jm
#!TypeError

const foo = 2
foo = 3
